Phase 1/test.output
Grammar

    0 $accept: program $end

    1 program: statement_list

    2 statement_list: statement
    3               | statement_list statement

    4 statement: simple_statement
    5          | compound_statement
    6          | '{' statement_list '}'

    7 simple_statement: assignment_statement
    8                 | declaration_statement
    9                 | expression
   10                 | function_call
   11                 | print_statement
   12                 | return_statement
   13                 | BREAK
   14                 | CONTINUE

   15 compound_statement: for_statement
   16                   | while_statement
   17                   | if_statement
   18                   | do_while_statement
   19                   | switch_statement

   20 assignment_statement: VARIABLE '=' expression
   21                     | CONSTANT '=' expression

   22 print_statement: PRINT '(' expression ')'

   23 return_statement: RETURN expression
   24                 | RETURN null_expression

   25 null_expression: ZERO

   26 function_call: FUNCTION '(' expression ')'

   27 data_type: INT_TYPE
   28          | FLOAT_TYPE
   29          | BOOL_TYPE
   30          | CHAR_TYPE
   31          | STRING_TYPE

   32 declaration_statement: CONST data_type CONSTANT '=' expression
   33                      | data_type VARIABLE '=' expression

   34 for_statement: FOR '(' declaration_statement ';' expression ';' assignment_statement ')' statement

   35 while_statement: WHILE '(' expression ')' statement

   36 do_while_statement: DO statement WHILE '(' expression ')'

   37 if_statement: IF '(' expression ')' statement
   38             | IF '(' expression ')' statement ELSE statement

   39 switch_statement: SWITCH '(' VARIABLE ')' '{' cases '}'
   40                 | SWITCH '(' VARIABLE ')' '{' cases default_statement '}'

   41 cases: CASE INTEGER ':' statement cases
   42      | /* empty */

   43 default_statement: DEFAULT ':' statement

   44 expression: expression '+' expression
   45           | expression '-' expression
   46           | expression '*' expression
   47           | expression '/' expression
   48           | '(' expression ')'
   49           | NOT expression
   50           | expression AND expression
   51           | expression OR expression
   52           | expression GREATER_EQUAL expression
   53           | expression LESS_EQUAL expression
   54           | expression EQUAL expression
   55           | expression NOTEQUAL expression
   56           | expression '<' expression
   57           | expression '>' expression
   58           | INTEGER
   59           | FLOAT
   60           | CHAR
   61           | STRING
   62           | VARIABLE
   63           | CONSTANT


Terminals, with rules where they appear

$end (0) 0
'(' (40) 22 26 34 35 36 37 38 39 40 48
')' (41) 22 26 34 35 36 37 38 39 40 48
'*' (42) 46
'+' (43) 44
'-' (45) 45
'/' (47) 47
':' (58) 41 43
';' (59) 34
'<' (60) 56
'=' (61) 20 21 32 33
'>' (62) 57
'{' (123) 6 39 40
'}' (125) 6 39 40
error (256)
VARIABLE (258) 20 33 39 40 62
CONSTANT (259) 21 32 63
INTEGER (260) 41 58
FLOAT (261) 59
CHAR (262) 60
STRING (263) 61
IF (264) 37 38
SWITCH (265) 39 40
CASE (266) 41
DEFAULT (267) 43
FOR (268) 34
WHILE (269) 35 36
DO (270) 36
BREAK (271) 13
CONTINUE (272) 14
CONST (273) 32
INT_TYPE (274) 27
FLOAT_TYPE (275) 28
BOOL_TYPE (276) 29
CHAR_TYPE (277) 30
STRING_TYPE (278) 31
FUNCTION (279) 26
PRINT (280) 22
RETURN (281) 23 24
IFX (282)
ELSE (283) 38
ZERO (284) 25
OR (285) 51
AND (286) 50
NOTEQUAL (287) 55
EQUAL (288) 54
LESS_EQUAL (289) 53
GREATER_EQUAL (290) 52
NOT (291) 49


Nonterminals, with rules where they appear

$accept (50)
    on left: 0
program (51)
    on left: 1, on right: 0
statement_list (52)
    on left: 2 3, on right: 1 3 6
statement (53)
    on left: 4 5 6, on right: 2 3 34 35 36 37 38 41 43
simple_statement (54)
    on left: 7 8 9 10 11 12 13 14, on right: 4
compound_statement (55)
    on left: 15 16 17 18 19, on right: 5
assignment_statement (56)
    on left: 20 21, on right: 7 34
print_statement (57)
    on left: 22, on right: 11
return_statement (58)
    on left: 23 24, on right: 12
null_expression (59)
    on left: 25, on right: 24
function_call (60)
    on left: 26, on right: 10
data_type (61)
    on left: 27 28 29 30 31, on right: 32 33
declaration_statement (62)
    on left: 32 33, on right: 8 34
for_statement (63)
    on left: 34, on right: 15
while_statement (64)
    on left: 35, on right: 16
do_while_statement (65)
    on left: 36, on right: 18
if_statement (66)
    on left: 37 38, on right: 17
switch_statement (67)
    on left: 39 40, on right: 19
cases (68)
    on left: 41 42, on right: 39 40 41
default_statement (69)
    on left: 43, on right: 40
expression (70)
    on left: 44 45 46 47 48 49 50 51 52 53 54 55 56 57 58 59 60 61
    62 63, on right: 9 20 21 22 23 26 32 33 34 35 36 37 38 44 45 46
    47 48 49 50 51 52 53 54 55 56 57


state 0

    0 $accept: . program $end

    VARIABLE     shift, and go to state 1
    CONSTANT     shift, and go to state 2
    INTEGER      shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    STRING       shift, and go to state 6
    IF           shift, and go to state 7
    SWITCH       shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    DO           shift, and go to state 11
    BREAK        shift, and go to state 12
    CONTINUE     shift, and go to state 13
    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19
    FUNCTION     shift, and go to state 20
    PRINT        shift, and go to state 21
    RETURN       shift, and go to state 22
    NOT          shift, and go to state 23
    '{'          shift, and go to state 24
    '('          shift, and go to state 25

    program                go to state 26
    statement_list         go to state 27
    statement              go to state 28
    simple_statement       go to state 29
    compound_statement     go to state 30
    assignment_statement   go to state 31
    print_statement        go to state 32
    return_statement       go to state 33
    function_call          go to state 34
    data_type              go to state 35
    declaration_statement  go to state 36
    for_statement          go to state 37
    while_statement        go to state 38
    do_while_statement     go to state 39
    if_statement           go to state 40
    switch_statement       go to state 41
    expression             go to state 42


state 1

   20 assignment_statement: VARIABLE . '=' expression
   62 expression: VARIABLE .

    '='  shift, and go to state 43

    $default  reduce using rule 62 (expression)


state 2

   21 assignment_statement: CONSTANT . '=' expression
   63 expression: CONSTANT .

    '='  shift, and go to state 44

    $default  reduce using rule 63 (expression)


state 3

   58 expression: INTEGER .

    $default  reduce using rule 58 (expression)


state 4

   59 expression: FLOAT .

    $default  reduce using rule 59 (expression)


state 5

   60 expression: CHAR .

    $default  reduce using rule 60 (expression)


state 6

   61 expression: STRING .

    $default  reduce using rule 61 (expression)


state 7

   37 if_statement: IF . '(' expression ')' statement
   38             | IF . '(' expression ')' statement ELSE statement

    '('  shift, and go to state 45


state 8

   39 switch_statement: SWITCH . '(' VARIABLE ')' '{' cases '}'
   40                 | SWITCH . '(' VARIABLE ')' '{' cases default_statement '}'

    '('  shift, and go to state 46


state 9

   34 for_statement: FOR . '(' declaration_statement ';' expression ';' assignment_statement ')' statement

    '('  shift, and go to state 47


state 10

   35 while_statement: WHILE . '(' expression ')' statement

    '('  shift, and go to state 48


state 11

   36 do_while_statement: DO . statement WHILE '(' expression ')'

    VARIABLE     shift, and go to state 1
    CONSTANT     shift, and go to state 2
    INTEGER      shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    STRING       shift, and go to state 6
    IF           shift, and go to state 7
    SWITCH       shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    DO           shift, and go to state 11
    BREAK        shift, and go to state 12
    CONTINUE     shift, and go to state 13
    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19
    FUNCTION     shift, and go to state 20
    PRINT        shift, and go to state 21
    RETURN       shift, and go to state 22
    NOT          shift, and go to state 23
    '{'          shift, and go to state 24
    '('          shift, and go to state 25

    statement              go to state 49
    simple_statement       go to state 29
    compound_statement     go to state 30
    assignment_statement   go to state 31
    print_statement        go to state 32
    return_statement       go to state 33
    function_call          go to state 34
    data_type              go to state 35
    declaration_statement  go to state 36
    for_statement          go to state 37
    while_statement        go to state 38
    do_while_statement     go to state 39
    if_statement           go to state 40
    switch_statement       go to state 41
    expression             go to state 42


state 12

   13 simple_statement: BREAK .

    $default  reduce using rule 13 (simple_statement)


state 13

   14 simple_statement: CONTINUE .

    $default  reduce using rule 14 (simple_statement)


state 14

   32 declaration_statement: CONST . data_type CONSTANT '=' expression

    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19

    data_type  go to state 50


state 15

   27 data_type: INT_TYPE .

    $default  reduce using rule 27 (data_type)


state 16

   28 data_type: FLOAT_TYPE .

    $default  reduce using rule 28 (data_type)


state 17

   29 data_type: BOOL_TYPE .

    $default  reduce using rule 29 (data_type)


state 18

   30 data_type: CHAR_TYPE .

    $default  reduce using rule 30 (data_type)


state 19

   31 data_type: STRING_TYPE .

    $default  reduce using rule 31 (data_type)


state 20

   26 function_call: FUNCTION . '(' expression ')'

    '('  shift, and go to state 51


state 21

   22 print_statement: PRINT . '(' expression ')'

    '('  shift, and go to state 52


state 22

   23 return_statement: RETURN . expression
   24                 | RETURN . null_expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    ZERO      shift, and go to state 55
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    null_expression  go to state 56
    expression       go to state 57


state 23

   49 expression: NOT . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 58


state 24

    6 statement: '{' . statement_list '}'

    VARIABLE     shift, and go to state 1
    CONSTANT     shift, and go to state 2
    INTEGER      shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    STRING       shift, and go to state 6
    IF           shift, and go to state 7
    SWITCH       shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    DO           shift, and go to state 11
    BREAK        shift, and go to state 12
    CONTINUE     shift, and go to state 13
    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19
    FUNCTION     shift, and go to state 20
    PRINT        shift, and go to state 21
    RETURN       shift, and go to state 22
    NOT          shift, and go to state 23
    '{'          shift, and go to state 24
    '('          shift, and go to state 25

    statement_list         go to state 59
    statement              go to state 28
    simple_statement       go to state 29
    compound_statement     go to state 30
    assignment_statement   go to state 31
    print_statement        go to state 32
    return_statement       go to state 33
    function_call          go to state 34
    data_type              go to state 35
    declaration_statement  go to state 36
    for_statement          go to state 37
    while_statement        go to state 38
    do_while_statement     go to state 39
    if_statement           go to state 40
    switch_statement       go to state 41
    expression             go to state 42


state 25

   48 expression: '(' . expression ')'

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 60


state 26

    0 $accept: program . $end

    $end  shift, and go to state 61


state 27

    1 program: statement_list .
    3 statement_list: statement_list . statement

    VARIABLE     shift, and go to state 1
    CONSTANT     shift, and go to state 2
    INTEGER      shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    STRING       shift, and go to state 6
    IF           shift, and go to state 7
    SWITCH       shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    DO           shift, and go to state 11
    BREAK        shift, and go to state 12
    CONTINUE     shift, and go to state 13
    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19
    FUNCTION     shift, and go to state 20
    PRINT        shift, and go to state 21
    RETURN       shift, and go to state 22
    NOT          shift, and go to state 23
    '{'          shift, and go to state 24
    '('          shift, and go to state 25

    $default  reduce using rule 1 (program)

    statement              go to state 62
    simple_statement       go to state 29
    compound_statement     go to state 30
    assignment_statement   go to state 31
    print_statement        go to state 32
    return_statement       go to state 33
    function_call          go to state 34
    data_type              go to state 35
    declaration_statement  go to state 36
    for_statement          go to state 37
    while_statement        go to state 38
    do_while_statement     go to state 39
    if_statement           go to state 40
    switch_statement       go to state 41
    expression             go to state 42


state 28

    2 statement_list: statement .

    $default  reduce using rule 2 (statement_list)


state 29

    4 statement: simple_statement .

    $default  reduce using rule 4 (statement)


state 30

    5 statement: compound_statement .

    $default  reduce using rule 5 (statement)


state 31

    7 simple_statement: assignment_statement .

    $default  reduce using rule 7 (simple_statement)


state 32

   11 simple_statement: print_statement .

    $default  reduce using rule 11 (simple_statement)


state 33

   12 simple_statement: return_statement .

    $default  reduce using rule 12 (simple_statement)


state 34

   10 simple_statement: function_call .

    $default  reduce using rule 10 (simple_statement)


state 35

   33 declaration_statement: data_type . VARIABLE '=' expression

    VARIABLE  shift, and go to state 63


state 36

    8 simple_statement: declaration_statement .

    $default  reduce using rule 8 (simple_statement)


state 37

   15 compound_statement: for_statement .

    $default  reduce using rule 15 (compound_statement)


state 38

   16 compound_statement: while_statement .

    $default  reduce using rule 16 (compound_statement)


state 39

   18 compound_statement: do_while_statement .

    $default  reduce using rule 18 (compound_statement)


state 40

   17 compound_statement: if_statement .

    $default  reduce using rule 17 (compound_statement)


state 41

   19 compound_statement: switch_statement .

    $default  reduce using rule 19 (compound_statement)


state 42

    9 simple_statement: expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75

    $default  reduce using rule 9 (simple_statement)


state 43

   20 assignment_statement: VARIABLE '=' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 76


state 44

   21 assignment_statement: CONSTANT '=' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 77


state 45

   37 if_statement: IF '(' . expression ')' statement
   38             | IF '(' . expression ')' statement ELSE statement

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 78


state 46

   39 switch_statement: SWITCH '(' . VARIABLE ')' '{' cases '}'
   40                 | SWITCH '(' . VARIABLE ')' '{' cases default_statement '}'

    VARIABLE  shift, and go to state 79


state 47

   34 for_statement: FOR '(' . declaration_statement ';' expression ';' assignment_statement ')' statement

    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19

    data_type              go to state 35
    declaration_statement  go to state 80


state 48

   35 while_statement: WHILE '(' . expression ')' statement

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 81


state 49

   36 do_while_statement: DO statement . WHILE '(' expression ')'

    WHILE  shift, and go to state 82


state 50

   32 declaration_statement: CONST data_type . CONSTANT '=' expression

    CONSTANT  shift, and go to state 83


state 51

   26 function_call: FUNCTION '(' . expression ')'

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 84


state 52

   22 print_statement: PRINT '(' . expression ')'

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 85


state 53

   62 expression: VARIABLE .

    $default  reduce using rule 62 (expression)


state 54

   63 expression: CONSTANT .

    $default  reduce using rule 63 (expression)


state 55

   25 null_expression: ZERO .

    $default  reduce using rule 25 (null_expression)


state 56

   24 return_statement: RETURN null_expression .

    $default  reduce using rule 24 (return_statement)


state 57

   23 return_statement: RETURN expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75

    $default  reduce using rule 23 (return_statement)


state 58

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   49           | NOT expression .
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    $default  reduce using rule 49 (expression)


state 59

    3 statement_list: statement_list . statement
    6 statement: '{' statement_list . '}'

    VARIABLE     shift, and go to state 1
    CONSTANT     shift, and go to state 2
    INTEGER      shift, and go to state 3
    FLOAT        shift, and go to state 4
    CHAR         shift, and go to state 5
    STRING       shift, and go to state 6
    IF           shift, and go to state 7
    SWITCH       shift, and go to state 8
    FOR          shift, and go to state 9
    WHILE        shift, and go to state 10
    DO           shift, and go to state 11
    BREAK        shift, and go to state 12
    CONTINUE     shift, and go to state 13
    CONST        shift, and go to state 14
    INT_TYPE     shift, and go to state 15
    FLOAT_TYPE   shift, and go to state 16
    BOOL_TYPE    shift, and go to state 17
    CHAR_TYPE    shift, and go to state 18
    STRING_TYPE  shift, and go to state 19
    FUNCTION     shift, and go to state 20
    PRINT        shift, and go to state 21
    RETURN       shift, and go to state 22
    NOT          shift, and go to state 23
    '{'          shift, and go to state 24
    '}'          shift, and go to state 86
    '('          shift, and go to state 25

    statement              go to state 62
    simple_statement       go to state 29
    compound_statement     go to state 30
    assignment_statement   go to state 31
    print_statement        go to state 32
    return_statement       go to state 33
    function_call          go to state 34
    data_type              go to state 35
    declaration_statement  go to state 36
    for_statement          go to state 37
    while_statement        go to state 38
    do_while_statement     go to state 39
    if_statement           go to state 40
    switch_statement       go to state 41
    expression             go to state 42


state 60

   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   48           | '(' expression . ')'
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75
    ')'            shift, and go to state 87


state 61

    0 $accept: program $end .

    $default  accept


state 62

    3 statement_list: statement_list statement .

    $default  reduce using rule 3 (statement_list)


state 63

   33 declaration_statement: data_type VARIABLE . '=' expression

    '='  shift, and go to state 88


state 64

   51 expression: expression OR . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 89


state 65

   50 expression: expression AND . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 90


state 66

   56 expression: expression '<' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 91


state 67

   57 expression: expression '>' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 92


state 68

   55 expression: expression NOTEQUAL . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 93


state 69

   54 expression: expression EQUAL . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 94


state 70

   53 expression: expression LESS_EQUAL . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 95


state 71

   52 expression: expression GREATER_EQUAL . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 96


state 72

   44 expression: expression '+' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 97


state 73

   45 expression: expression '-' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 98


state 74

   46 expression: expression '*' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 99


state 75

   47 expression: expression '/' . expression

    VARIABLE  shift, and go to state 53
    CONSTANT  shift, and go to state 54
    INTEGER   shift, and go to state 3
    FLOAT     shift, and go to state 4
    CHAR      shift, and go to state 5
    STRING    shift, and go to state 6
    NOT       shift, and go to state 23
    '('       shift, and go to state 25

    expression  go to state 100


state 76

   20 assignment_statement: VARIABLE '=' expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75

    $default  reduce using rule 20 (assignment_statement)


state 77

   21 assignment_statement: CONSTANT '=' expression .
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75

    $default  reduce using rule 21 (assignment_statement)


state 78

   37 if_statement: IF '(' expression . ')' statement
   38             | IF '(' expression . ')' statement ELSE statement
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75
    ')'            shift, and go to state 101


state 79

   39 switch_statement: SWITCH '(' VARIABLE . ')' '{' cases '}'
   40                 | SWITCH '(' VARIABLE . ')' '{' cases default_statement '}'

    ')'  shift, and go to state 102


state 80

   34 for_statement: FOR '(' declaration_statement . ';' expression ';' assignment_statement ')' statement

    ';'  shift, and go to state 103


state 81

   35 while_statement: WHILE '(' expression . ')' statement
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression

    OR             shift, and go to state 64
    AND            shift, and go to state 65
    '<'            shift, and go to state 66
    '>'            shift, and go to state 67
    NOTEQUAL       shift, and go to state 68
    EQUAL          shift, and go to state 69
    LESS_EQUAL     shift, and go to state 70
    GREATER_EQUAL  shift, and go to state 71
    '+'            shift, and go to state 72
    '-'            shift, and go to state 73
    '*'            shift, and go to state 74
    '/'            shift, and go to state 75
    ')'            shift, and go to state 104


state 82

   36 do_while_statement: DO statement WHILE . '(' expression ')'

    '('  shift, and go to state 105


state 83

   32 declaration_statement: CONST data_type CONSTANT . '=' expression

    '='  shift, and go to state 106


state 84

   26 function_call: FUNCTION '(' expression . ')'
   44 expression: expression . '+' expression
   45           | expression . '-' expression
   46           | expression . '*' expression
   47           | expression . '/' expression
   50           | expression . AND expression
   51           | expression . OR expression
   52           | expression . GREATER_EQUAL expression
   53           | expression . LESS_EQUAL expression
   54           | expression . EQUAL expression
   55           | expression . NOTEQUAL expression
   56           | expression . '<' expression
   57           | expression . '>' expression
